[Updating]-update 404.html

--- a/404.html
+++ b/404.html
@@ -42,8 +42,28 @@
                         <p>Please visit <a href="index.html">this page</a></p>
                     </div>
                 </div>
-
-
-            </div>
+				
+				<!-- Footer -->
+				<footer id="footer">
+					<div class="inner">
+						<ul class="icons">
+							<li><a href="https://dribbble.com/Hanswanglin" class="icon brands alt fa-dribbble"><span class="label">Dribbble</span></a></li>
+							<li><a href="https://github.com/Hanswanglin" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://www.linkedin.com/in/hans-wang-86294011a/" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+						</ul>
+						<ul class="copyright">
+							<li>&copy; Hans Wanglin @2020</li><li>My Blog: <a href="https://hanswanglin.github.io/HansBlog/">HansBlog</a></li>
+						</ul>
+					</div>
+				</footer>
+			</div>
+			<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.scrolly.min.js"></script>
+			<script src="assets/js/jquery.scrollex.min.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
 	</body>
 </html>
