--- a/404.html
+++ b/404.html
@@ -12,7 +12,7 @@
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 
-	<body class="is-preload">
+	<body >
 		<!-- Wrapper -->
 			<div id="wrapper">
 
